test/fail/basic_syntax/wrong_arg_count_closed_call.lly
#[
SyntaxError: Function g expects 0 args, but got 1.
    from wrong_arg_count_closed_call.lly:8
]#

define f(a: integer) {
    define g { a += 1 }
    g(1)
}
